@@ -1,4 +1,4 @@
-/*	$NetBSD: aac_pci.c,v 1.24 2008/04/28 20:23:54 martin Exp $	*/
+/*	$NetBSD: aac_pci.c,v 1.25 2008/05/08 15:33:34 sborrill Exp $	*/
 
 /*-
  * Copyright (c) 2002 The NetBSD Foundation, Inc.
@@ -65,7 +65,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: aac_pci.c,v 1.24 2008/04/28 20:23:54 martin Exp $");
+__KERNEL_RCSID(0, "$NetBSD: aac_pci.c,v 1.25 2008/05/08 15:33:34 sborrill Exp $");
 
 #include <sys/param.h>
 #include <sys/systm.h>
@@ -343,6 +343,15 @@ static struct aac_ident {
 		AAC_HWIF_I960RX,
 		AAC_QUIRK_NO4GB,
 		"HP ML110 G2 (Adaptec ASR-2610SA)"
+	},
+	{
+		PCI_VENDOR_ADP2,
+		PCI_PRODUCT_ADP2_ASR2120S,
+		PCI_VENDOR_IBM,
+		PCI_PRODUCT_IBM_SERVERAID8K,
+		AAC_HWIF_RKT,
+		0,
+		"IBM ServeRAID 8k"
 	},
 	{
 		PCI_VENDOR_DEC,
